--- a/arabic_writer.html
+++ b/arabic_writer.html
@@ -1,5 +1,14 @@
 <!DOCTYPE HTML>
 <!--
+
+--------------------------------------
+Modifed by Sal7one for arabic users
+Version:            1.4.5
+----------------------------------------
+
+
+
+
 Author:             Omar Muhammad
 Email:              admin@omar84.com
 Website:            http://omar84.com
@@ -848,3 +857,5 @@ function setLang(langid) {    //a function to change the language of the interfa
     <!--<div id="cursorPos">&nbsp;</div>-->
   </form>
 </body>
+  </html>
+
