about page and og credits

--- a/index.html
+++ b/index.html
@@ -467,6 +467,8 @@ function setLang(langid) {    //a function to change the language of the interfa
   </style>
 </head>
 <body onload="setLang('ar');">  <!-- after page is loaded, apply the default language -->
+
+
   <form name="writer" id="writer" action="#" class="center">
     <table>
       <tr>
@@ -832,6 +834,26 @@ function setLang(langid) {    //a function to change the language of the interfa
     <!-- End All About-->
     <!--<div id="cursorPos">&nbsp;</div>-->
   </form>
+<div
+  style="
+  margin-top: 30px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.0em;
+    font-weight: bold;
+    margin: 1em 0;
+    text-align: center;
+    color: #280d0d;
+  "
+>
+  -----About The project-----<br>
+
+  Original project belongs to the amazing <a href="https://github.com/omar84" style="color: inherit; text-decoration: underline;">Github.com/omar84</a><br>
+  <a href="https://github.com/omar84/arabic_writer" style="color: inherit; text-decoration: underline;">https://github.com/omar84/arabic_writer</a>Thanks for the hard work
+</div>
 </body>
   </html>
 
